# mlops-end2end

./: .gitignore  README.md  bitbucket-pipelines.yml  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: dev.yaml  prod.yaml
mlops-end2end/01-mlops-quickstart/: 00_mlops_end2end_quickstart_presentation.py  01_feature_engineering.py  02_train_lightGBM.py  03_from_notebook_to_models_in_uc.py  04_challenger_validation.py  05_batch_inference.py
mlops-end2end/02-mlops-advanced/: 00_mlops_end2end_advanced.py  01_feature_engineering.py  02_model_training_hpo_optuna.py  03a_create_deployment_job.py  03b_from_notebook_to_models_in_uc.py  04a_challenger_validation.py  04b_challenger_approval.py  05_batch_inference.py  06_serve_features_and_model.py  07_model_monitoring.py  08_drift_detection.py
mlops-end2end/_resources/: 00-global-setup-v2.py  00-setup.py
notebooks/02-mlops-advanced/: 01_feature_engineering_refactored.py  02_model_training_hpo_optuna_refactored.py
pipelines/: dlt_feature_engineering.py  dlt_ingestion.py
resources/: dlt_pipelines.yml  experiments.yml  jobs.yml
scripts/: bootstrap_volumes.py  run_schema_bootstrap.py
src/churn/: __init__.py  config.py  data_source.py  feature_engineering.py  feature_store_pipeline.py  preprocessing.py  schema_bootstrap.py  schemas.py  training.py
tests/: conftest.py
tests/integration/: test_feature_store_pipeline.py
tests/unit/: test_config.py  test_data_source.py  test_data_validation.py  test_dlt_feature_engineering.py  test_dlt_ingestion.py  test_feature_engineering.py  test_feature_store.py  (+6 more)
